--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrainSplit: The Double-Thinking Game</title>
+    <title>BrainSplit: The Double-Thinking Game by Thuhbest</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1>🧠 BrainSplit 🧠</h1>
+            <div class="author">by Thuhbest</div>
             <div class="score-container">
                 <div class="score">Time: <span id="score">0</span>s</div>
                 <div class="best-score">Best: <span id="best-score">0</span>s</div>
@@ -24,10 +25,27 @@
                     <div class="challenge-box" id="left-challenge">
                         <div class="question" id="left-question"></div>
                         <div class="answer" id="left-answer"></div>
+                        <div class="keyboard">
+                            <div class="keyboard-row">
+                                <div class="key" data-key="q">Q (5)</div>
+                                <div class="key" data-key="w">W (1)</div>
+                                <div class="key" data-key="e">E (6)</div>
+                                <div class="key" data-key="r">R (8)</div>
+                            </div>
+                            <div class="keyboard-row">
+                                <div class="key" data-key="a">A (2)</div>
+                                <div class="key" data-key="s">S (3)</div>
+                                <div class="key" data-key="d">D (4)</div>
+                                <div class="key" data-key="f">F (7)</div>
+                            </div>
+                            <div class="keyboard-row">
+                                <div class="key wide" data-key="backspace">⌫</div>
+                                <div class="key wide" data-key="enter">ENTER</div>
+                            </div>
+                        </div>
                         <div class="timer-container">
                             <div class="timer-bar" id="left-timer"></div>
                         </div>
-                        <div class="instructions">Use WASD (W=1, A=2, S=3, D=4)</div>
                     </div>
                 </div>
 
@@ -35,11 +53,11 @@
                     <div class="grid-header">Right Brain (Creative)</div>
                     <div class="challenge-box" id="right-challenge">
                         <div class="question" id="right-question"></div>
+                        <div class="challenge-content" id="right-content"></div>
                         <div class="options" id="right-options"></div>
                         <div class="timer-container">
                             <div class="timer-bar" id="right-timer"></div>
                         </div>
-                        <div class="instructions">Use Arrow Keys</div>
                     </div>
                 </div>
             </div>
@@ -55,18 +73,40 @@
 
         <div class="start-screen" id="start-screen">
             <h2>The Double-Thinking Game</h2>
+            <div class="author">by Thuhbest</div>
             <p>Control two brains simultaneously!</p>
             <div class="controls">
                 <div class="control-left">
                     <h3>Left Brain (Logical)</h3>
-                    <p>WASD for numbers (W=1, A=2, S=3, D=4)</p>
-                    <p>Math, sequences, patterns</p>
+                    <div class="keyboard-demo">
+                        <div class="demo-row">
+                            <span class="demo-key">W</span> = 1
+                            <span class="demo-key">A</span> = 2
+                            <span class="demo-key">S</span> = 3
+                        </div>
+                        <div class="demo-row">
+                            <span class="demo-key">D</span> = 4
+                            <span class="demo-key">Q</span> = 5
+                            <span class="demo-key">E</span> = 6
+                        </div>
+                        <div class="demo-row">
+                            <span class="demo-key">F</span> = 7
+                            <span class="demo-key">R</span> = 8
+                        </div>
+                    </div>
+                    <p>Solve math problems and sequences</p>
                 </div>
                 <div class="control-right">
                     <h3>Right Brain (Creative)</h3>
-                    <p>Arrow keys for selection</p>
-                    <p>SPACE for rhythm</p>
-                    <p>Colors, emojis, rhythms</p>
+                    <div class="keyboard-demo">
+                        <div class="demo-row">
+                            <span class="demo-key">←</span> <span class="demo-key">↑</span> <span class="demo-key">↓</span> <span class="demo-key">→</span>
+                        </div>
+                        <div class="demo-row">
+                            <span class="demo-key">SPACE</span> for rhythm
+                        </div>
+                    </div>
+                    <p>Match colors, emojis, or tap rhythms</p>
                 </div>
             </div>
             <button class="start-button" id="start-button">Start Game</button>
